Help: Courses Nudge - Fix Colour Contrast (#42872)

--- a/client/me/help/help-teaser-button.scss
+++ b/client/me/help/help-teaser-button.scss
@@ -33,7 +33,7 @@
 }
 
 .help__help-teaser-button-description {
-	color: var( --color-neutral-light );
+	color: var( --color-text-subtle );
 	font-size: 12px;
 	display: block;
 	padding-right: 15px;
